--- a/web/main.css
+++ b/web/main.css
@@ -1,5 +1,5 @@
 /*
-Copyright (c) 2013, akserg (Sergey Akopkokhyants)
+Copyright (c) 2013 - 2014, akserg (Sergey Akopkokhyants)
 https://github.com/akserg/angular.dart.ui
 All rights reserved.  Please see the LICENSE.md file.
 */
