--- a/lib/css/carousel.css
+++ b/lib/css/carousel.css
@@ -1,3 +1,8 @@
+/*
+Copyright (C) 2013 - 2014 Angular Dart UI authors. Please see AUTHORS.md.
+https://github.com/akserg/angular.dart.ui
+All rights reserved.  Please see the LICENSE.md file.
+*/
 carousel slide ^ .item {
   position: relative;
   display: none;
