--- a/web/main.css
+++ b/web/main.css
@@ -12,3 +12,16 @@ body {
   line-height: 1.2em;
   margin: 15px;
 }
+
+
+.ui-drag-start {
+  -moz-transform:scale(0.8);
+  -webkit-transform:scale(0.8);
+  transform:scale(0.8);
+  opacity:0.7;
+  border: 2px dashed #000;
+}
+
+.ui-drag-over {
+  border: 2px dashed #000;
+}
