--- a/web/main.css
+++ b/web/main.css
@@ -5,7 +5,7 @@ All rights reserved.  Please see the LICENSE.md file.
 */
 
 body {
-  background-color: #F8F8F8;
+  background-color: white;
   font-family: 'Open Sans', sans-serif;
   font-size: 14px;
   font-weight: normal;
