--- a/lib/grid/grid.css
+++ b/lib/grid/grid.css
@@ -27,7 +27,7 @@ All rights reserved.  Please see the LICENSE.md file.
 }
 
 /* Header */
-.sm-ng-grid thead tr td {
+.sm-ng-grid thead tr th {
   text-align: center;
   vertical-align: top;
   -moz-user-select: none;
@@ -41,7 +41,7 @@ All rights reserved.  Please see the LICENSE.md file.
 }
 
 /* Header filtert */
-.sm-ng-grid .sm-ng-column-filter {
+.sm-ng-grid .sm-ng-filter {
   margin-top: 0.5em;
   margin-bottom: 0.1em;
 }
